[gd_scene load_steps=14 format=3 uid="uid://6q63p58wji8"]

[ext_resource type="Script" path="res://Enemy/scenes/boss001/boss_001.gd" id="1_2tnba"]
[ext_resource type="Script" path="res://Enemy/scenes/boss001/StateMachine.gd" id="2_d5t0c"]
[ext_resource type="Script" path="res://Enemy/scenes/boss001/Idle.gd" id="3_62can"]
[ext_resource type="Script" path="res://Enemy/scenes/boss001/Move.gd" id="4_80e1a"]
[ext_resource type="Script" path="res://Enemy/scenes/boss001/Pursue.gd" id="5_vlqer"]
[ext_resource type="Script" path="res://Enemy/scenes/boss001/Ram.gd" id="6_ku7or"]
[ext_resource type="Script" path="res://Enemy/scenes/boss001/Shoot.gd" id="7_luxtf"]
[ext_resource type="Script" path="res://Enemy/scenes/boss001/Charge.gd" id="8_d5egs"]
[ext_resource type="Script" path="res://Enemy/scenes/boss001/Discharge.gd" id="9_vhjtc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_amsts"]

[sub_resource type="Gradient" id="Gradient_deahe"]
offsets = PackedFloat32Array(0, 0.534591, 0.993711)
colors = PackedColorArray(0.506554, 0.0111052, 0.402073, 1, 1, 0.10469, 0.755711, 1, 0.730216, 0.730216, 0.730216, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wyexo"]
gradient = SubResource("Gradient_deahe")
width = 32
height = 32
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_r21nx"]
radius = 80.0

[node name="Boss001" type="CharacterBody2D"]
collision_layer = 4
floor_stop_on_slope = false
script = ExtResource("1_2tnba")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_amsts")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_wyexo")

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_r21nx")

[node name="Timers" type="Node" parent="."]

[node name="IdleTimer" type="Timer" parent="Timers"]

[node name="PursueTimer" type="Timer" parent="Timers"]

[node name="ShootCD" type="Timer" parent="Timers"]

[node name="RamCD" type="Timer" parent="Timers"]

[node name="MoveTimer" type="Timer" parent="Timers"]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_d5t0c")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_62can")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("4_80e1a")

[node name="Pursue" type="Node" parent="StateMachine"]
script = ExtResource("5_vlqer")

[node name="Ram" type="Node" parent="StateMachine"]
script = ExtResource("6_ku7or")

[node name="Shoot" type="Node" parent="StateMachine"]
script = ExtResource("7_luxtf")

[node name="Charge" type="Node" parent="StateMachine"]
script = ExtResource("8_d5egs")

[node name="Discharge" type="Node" parent="StateMachine"]
script = ExtResource("9_vhjtc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="timeout" from="Timers/MoveTimer" to="." method="_on_move_timer_timeout"]
